# paddle-debug

./: .gitignore  .pre-commit-config.yaml  README.md
data/: debug_reader.cc  debug_reader.h  reader.cc  reader.h  writer.py
data/cc/: CMakeLists.txt  debug_helper.h  debug_reader.cc  debug_reader.h  paddle_debug_helper.h
data/cc/app/: main.cc
data/cc/tests/: test_reader.cc
data/python/: README.md
data/python/paddle_infer_debug/: __init__.py  _buffer.py  _reader.py  _writer.py  paddle_tensor.py
data/python/tests/: test_tensor.py  test_writer.py
